<resources>
    <string name="app_name">khalilo</string>
    <string name="username">username</string>
    <string name="password">passowrd</string>
    <string name="btnlogin">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u>Sign Up</u></string>
    <string name="add_member">Add Member</string>
    <string name="enter_member_name">Enter Member name</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="max_users">Max Users</string>
    <string name="admin_name">Admin Name</string>
    <string name="group_members">Group Members</string>
    <string name="top_5_most_bought_items">Top 5 Most Bought Items</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="compare_prices">Compare Prices</string>
    <string name="history">History</string>
    <string name="store">Store</string>
    <string name="popular_items">Popular Items</string>
    <string name="members">Members</string>
    <string name="delete_members">Delete Members</string>
    <string name="add_members">Add Members</string>
    <string name="already_have_an_account_signin">Already have an account? <u>Signin</u></string>
    <string name="search">Search</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="favorite_stores">Favorite stores</string>
    <string name="store_item">Store Item</string>
    <string name="check_out">Check Out</string>
    <string-array name="sort_options">
        <item>Ascending</item>
        <item>Descending</item>
        <item>Date (Newest First)</item>
        <item>Date (Oldest First)</item>
    </string-array>

</resources>